# GeoBoost

./: .gitignore  README.md  index.html  install.sh  package-lock.json  package.json  reinstall.sh  start.sh  vite.config.ts
.claude/: settings.json
backend/: analyzer.py  audit_html_generator.py  audit_parsers.py  audit_pdf_generator.py  crawler.py  database.py  ga4_api.py  main.py  pagespeed_api.py  pdf_generator.py  requirements.txt  speedtest.py  start_backend.sh
config/: config.defaults.json  config.json  cookie_selectors.json
src/: App.tsx  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AnalysisProgress.tsx  CheckSelector.tsx  Dashboard.tsx  Kickoff.tsx  Settings.tsx
src/components/audit/: AuditList.tsx  AuditWorkflow.tsx  CsvUploadZone.tsx  StepIndicator.tsx
src/components/audit/steps/: Step0Kickoff.tsx  Step1Website.tsx  Step2Crawl.tsx  Step2TechnicalScan.tsx  Step3Crawl.tsx  Step3Semrush.tsx  Step4Lighthouse.tsx  Step4Semrush.tsx  Step5Lighthouse.tsx  Step5Report.tsx  Step6Report.tsx
templates/: report.html
