[package]
name = "geoboost"
version = "1.0.0"
description = "GeoBoost – GA4 & SEO Analyse-Tool"
authors = ["wireon"]
license = "Proprietary"
repository = "https://github.com/Zenovs/GeoBoost"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

[features]
custom-protocol = ["tauri/custom-protocol"]
